# vivado-build-service

./: .gitignore  LICENSE  README.md  buildserver.py  client.py  dummy_client.py  pyproject.toml  requirements.txt  reset.py  server.py  setup.py  test.py  user.py.txt
bash/: local_autobuild_binfile_vivado2021.1.sh  test.sh
communications/server/: info.md
config/: default_client_config.toml  default_server_config.toml
docs/: client_config.toml  config.ini  config.py  config.toml  default_client_config.toml  default_config.ini  default_config.toml  default_server_config.toml
scripts/bash/: autobuild_  autobuild_dos.sh  autobuild_unix.sh  cleanup_script_  cleanup_script_dos.sh  testing.sh
scripts/tcl/: create_project_full_run.tcl
simulationflow/: filehandler.py  ipc.py  macutil.py  streamutil.py  taskhandler.py
src/: __init__.py  autobuild.py  buildserver.py  client.py  client_config.py  config.py  dbutil.py  dummy_client.py  filehandler.py  report_parser.py  reset.py  server_config.py  streamutil.py  task_factory.py  taskhandler.py  threaded_tcp_handler.py  user_queue.py
src/vivado_build_service/: __init__.py  client.py
tcl/: create_project_full_run.tcl
tests/: __init__.py  test_filehandler.py  test_server-client.py  test_server.py  test_usecase.py
tests/test_packet/: file3.txt  file4.txt
vbservice/: __init__.py  buildserver.py  client.py
vbservice/src/: autobuild.py  filehandler.py  paths.py  report_parser.py  task_factory.py  threaded_tcp_handler.py  (+1 more)
vtrunner/: autobuild.py  config.py  filehandler.py  reset.py  threaded_tcp_handler.py
(+9 files in other folders)
