[project]
name = "vbservice"
version = "0.1.0"
description = "This tool is designed to automate Vivado simulations by enabling clients to submit their build files to a server over a socket connection."
readme = "README.md"
authors = [
    { name = "Lukas Einhaus", email = "lukas.einhaus@uni-due.de" },
    { name = "Dominik Sukic", email = "dominik.sukic@uni-due.de" }
]
requires-python = ">=3.12"
dependencies = [
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "vivado-report-parser>=0.5.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
