[project]
name = "vivado-build-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lukas Einhaus", email = "lukas.einhaus@uni-due.de" }
]
    requires-python = ">=3.13"
dependencies = [
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "vivado-report-parser>=0.5.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
